# themefinder

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  deploy-pypi.yml  deploy-test-pypi.yml  pre-commit.yml  tests.yml
docs/: api_reference.md  contributing_to_docs.md  evaluation.md  index.md  internal_contributors.md  pipeline.md
evals/: eval_condensation.py  eval_generation.py  eval_mapping.py  eval_refinement.py  eval_sentiment.py  metrics.py  utils.py
evals/data/generation/: eval_sentiments.csv  framework_themes.json
evals/prompts/: condensation_eval.txt  generation_eval.txt  refinement_eval.txt
examples/: example_data.json  example_notebook.ipynb
src/themefinder/: __init__.py  core.py  llm_batch_processor.py  logging.py  models.py  theme_clustering_agent.py  themefinder_logging.py
src/themefinder/prompts/: agentic_theme_clustering.txt  consultation_system_prompt.txt  detail_detection.txt  sentiment_analysis.txt  theme_condensation.txt  theme_crush.txt  theme_generation.txt  theme_mapping.txt  theme_refinement.txt  theme_target_alignment.txt
tests/: conftest.py  test_core.py  test_llm_batch_processor.py  test_models.py  test_theme_clustering_agent.py
