[tool.poetry]
name = "themefinder"
version = "0.1.0"
description = "A topic modelling Python package designed for analysing one-to-many question-answer data eg free-text survey responses."
authors = [i.AI <themefinder@cabinetoffice.gov.uk>]
packages = [{include = "themefinder", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
langchain = "*"
langchain-openai = "0.1.17"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
langfuse = "2.29.1"
boto3 = "^1.29"
scikit-learn = "*"
openpyxl = "^3.1.5"
pyarrow = "^15.0.0" 

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.10"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-material = "^9.5.50"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
