[tool.poetry]
name = "themefinder"
version = "0.0.5"
description = "A topic modelling Python package designed for analysing one-to-many question-answer data eg free-text survey responses."
authors = ["i.AI <packages@cabinetoffice.gov.uk>"]
packages = [{include = "themefinder", from = "src"}]
readme = "README.md"
license = "MIT"
repository = "https://github.com/i-dot-ai/themefinder/"
documentation = "https://i-dot-ai.github.io/themefinder/"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "*"
langchain-openai = "0.1.17"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
langfuse = "2.29.1"
boto3 = "^1.29"
scikit-learn = "*"
openpyxl = "^3.1.5"
pyarrow = "^15.0.0" 
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.10"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
mkdocs-material = "^9.5.50"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
